<resources>
    <string name="app_name">Blood Donar</string>
    <array name="Gender">
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </array>

    <string name="delete">DELETE</string>

    <array name="Priviledges">
        <item>grant</item>
        <item>revoke</item>
    </array>

    <array name="donar_bool">
        <item>No</item>
        <item>Yes</item>
    </array>

    <array name="BloodTypes">
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </array>


    <string name="search_hint">Search Blood Group</string>
    <string name="donar_details">Donars</string>
    <string name="search">Search</string>

    <!-- Adiside_profile_optionsStrings-->
    <string name="user"> Users</string>
    <string name="profile">My Profile</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="bedonar">Be A Donar</string>


    <!-- Search  Donar Refine Options -->
    <string name="refine_age">Age</string>
    <string name="refine_bloodType">Blood Type</string>
    <string name="refine_name"> Name</string>
    <string name="refine_city">City</string>

    <!-- Search User Refine Options -->
    <string name="refine_uname">User Name</string>
    <string name="refine_uid">User Id</string>


    <!-- hints  -->
    <string name="id_hint">must be unique</string>
    <string name="weight_hint">in kilograms only</string>
    <string name="contact_hint">10 digits</string>
    <string name="location_hint">city name only</string>
    <string name="name_hint">Full name please</string>
    <string name="password_hint">Password Please</string>
    <string name="user_hint">Login id Please</string>


    <!-- Variable texts -->
    <string name="uid">User ID </string>
    <string name="uName">User Name </string>
    <string name="contact">Contact No </string>
    <string name="dob">Date of Birth </string>
    <string name="lastDonated">Last Donated </string>
    <string name="location">Current Location </string>
    <string name="dName">Donar Name </string>
    <string name="bloodType">Blood Type </string>
    <string name="gender">Gender </string>
    <string name="priviledge">Priviledges </string>
    <string name="weight">Weight </string>
    <string name="register">Register </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="pwd">Password </string>
    <string name="login">Login</string>
    <string name="update">Update</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="did">Donar id </string>
    <string name="action_settings">Settings</string>
    <string name="age">Age </string>
    <string name="grant">Grant</string>
    <string name="revoke">Revoke</string>
    <string name="userdetails">User Details</string>

    <string name="user_delete_dialog"> Do you want to delete </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragmenLogint</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
