<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/top"
        layout="@layout/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/top">


    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView20"
        android:layout_marginStart="12dp"
        android:layout_marginTop="21dp"
        android:text="@string/weight" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView17"
        android:layout_marginEnd="27dp"
        android:hint="@string/weight_hint" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView21"
        android:layout_below="@+id/textView21"
        android:layout_marginTop="27dp"
        android:text="@string/lastDonated" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView23"
        android:layout_below="@+id/blood"
        android:layout_marginTop="61dp"
        android:text="@string/dob" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView32"
        android:layout_below="@+id/textView28"
        android:layout_marginTop="17dp"
        android:text="@string/bloodType" />

    <Spinner
        android:id="@+id/blood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView23"
        android:layout_toEndOf="@+id/textView21"
        android:entries="@array/BloodTypes"/>

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/blood"
        android:layout_toEndOf="@+id/blood"
        android:text="@string/gender" />

    <Spinner
        android:id="@+id/dGen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView23"
        android:layout_alignParentEnd="true"
        android:entries="@array/Gender" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView30"
        android:layout_below="@+id/contactD"
        android:layout_marginTop="43dp"
        android:text="@string/location" />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView28"
        android:layout_alignBottom="@+id/textView28"
        android:layout_toStartOf="@+id/dGen"
        android:hint="@string/location_hint" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView32"
        android:layout_marginTop="31dp"
        android:text="@string/contact" />

    <EditText
        android:id="@+id/contactD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView30"
        android:layout_alignBottom="@+id/textView30"
        android:layout_alignEnd="@+id/location"
        android:hint="@string/contact_hint" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView30"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:text="@string/dName" />

    <EditText
        android:id="@+id/nameD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView32"
        android:layout_alignBottom="@+id/textView32"
        android:layout_alignStart="@+id/textView27"
        android:hint="@string/name_hint" />

    <Button
        android:id="@+id/dDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView21"
        android:layout_alignBottom="@+id/textView21"
        android:layout_alignEnd="@+id/textView27"
        android:text="Button" />

    <Button
        android:id="@+id/lastDonated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dDOB"
        android:layout_alignTop="@+id/textView20"
        android:text="Button" />

</RelativeLayout>
</RelativeLayout>