<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/top"
        layout="@layout/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top">


        <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="36dp"

        android:text="@string/uid" />

    <EditText
        android:id="@+id/uId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView12"
        android:layout_alignBottom="@+id/textView12"
        android:layout_alignStart="@+id/textView25"
        android:hint="@string/id_hint" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView12"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="37dp"
        android:text="@string/uName" />

    <EditText
        android:id="@+id/uName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/uId"
        android:layout_alignTop="@+id/textView18"
        android:hint="@string/name_hint" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView18"
        android:layout_below="@+id/textView18"
        android:layout_marginTop="36dp"
        android:text="@string/contact" />

    <EditText
        android:id="@+id/uContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView22"
        android:layout_alignBottom="@+id/textView22"
        android:layout_alignStart="@+id/uName"
        android:hint="@string/contact_hint" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView22"
        android:layout_below="@+id/textView22"
        android:layout_marginTop="28dp"
        android:text="@string/gender" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView24"
        android:layout_alignBottom="@+id/textView24"
        android:layout_toEndOf="@+id/uGen"
        android:text="@string/priviledge" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/uGen"
            android:layout_marginTop="107dp"
            android:text="@string/dob" />

    <Spinner
        android:id="@+id/uPriv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView25"
        android:layout_alignParentEnd="true"
        android:entries="@array/Priviledges" />



    <Spinner
        android:id="@+id/uGen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView25"
        android:layout_toEndOf="@+id/textView26"
        android:entries="@array/Gender" />

        <Button
            android:id="@+id/uDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView26"
            android:layout_alignBottom="@+id/textView26"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/uGen"
            android:onClick="showDatePickerDialog"
            android:text="Button" />

    </RelativeLayout>

</RelativeLayout>