<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    tools:context="com.example.swetha_pt1880.blooddonar.activity.DonarProfile">


    <include
        layout="@layout/app_bar_home2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />



    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="55dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView3"
        android:layout_marginStart="23dp"
        android:layout_toEndOf="@+id/imageView3"
        android:text="@string/did" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignEnd="@+id/textView3"
        android:text="@string/gender" />

    <TextView
        android:id="@+id/pdid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginStart="52dp"
        android:layout_toEndOf="@+id/textView3"
        android:text="TextView" />

    <TextView
        android:id="@+id/pdgen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/pdid"
        android:layout_alignTop="@+id/textView4"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:layout_marginStart="21dp"
        android:layout_marginTop="40dp"
        android:text="@string/dName" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView10"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="43dp"
        android:text="@string/dob" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView13"
        android:layout_below="@+id/textView13"
        android:layout_marginTop="40dp"
        android:text="@string/age" />

    <TextView
        android:id="@+id/pdname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView10"
        android:layout_toEndOf="@+id/textView4"
        android:text="TextView" />

    <TextView
        android:id="@+id/pddob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView15"
        android:layout_alignEnd="@+id/pdname"
        android:text="TextView" />

    <TextView
        android:id="@+id/pdage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView29"
        android:layout_toEndOf="@+id/textView19"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pdage"
        android:layout_alignBottom="@+id/pdage"
        android:layout_alignStart="@+id/textView3"
        android:text="@string/bloodType" />

    <TextView
        android:id="@+id/pdblood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_toEndOf="@+id/pdgen"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView15"
        android:layout_below="@+id/textView15"
        android:layout_marginTop="56dp"
        android:text="@string/lastDonated" />

    <TextView
        android:id="@+id/pddonated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView29"
        android:layout_marginEnd="17dp"
        android:layout_toStartOf="@+id/pdblood"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView29"
        android:layout_below="@+id/textView29"
        android:layout_marginTop="50dp"
        android:text="@string/location" />

    <TextView
        android:id="@+id/pdLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView33"
        android:layout_alignBottom="@+id/textView33"
        android:layout_alignStart="@+id/pddonated"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/pddob"
        android:layout_alignTop="@+id/callDonar"
        android:layout_marginTop="14dp"
        android:text="@string/contact" />

    <ImageButton
        android:id="@+id/callDonar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/pdLocation"
        android:layout_marginTop="32dp"
        app:srcCompat="@android:drawable/ic_menu_call"
        android:autoLink="phone"
        />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView35"
        android:layout_alignBottom="@+id/textView35"
        android:layout_alignStart="@+id/textView33"
        android:text="@string/weight" />

    <TextView
        android:id="@+id/pdWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView19"
        android:layout_alignBottom="@+id/textView19"
        android:layout_toEndOf="@+id/textView13"
        android:text="TextView"
        />
</RelativeLayout>
